--- a/Tech/Shopper/app/src/main/res/layout/activity_login.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_login.xml
@@ -5,199 +5,229 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    android:layout_marginTop="20dp"
     tools:context=".LoginActivity"
     android:background="@color/colorBackgroundColour">
 
-    <!-- Text: Let's Collab-->
-    <TextView
-        android:id="@+id/ss_name_TV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:fontFamily="@font/lemonada_bold"
-        android:text="Let's Collab"
-        android:textColor="@color/colorMainColour"
-        android:textSize="35sp"
-        android:textStyle="bold" />
-
-    <!-- Text: Login -->
-    <TextView
+    <LinearLayout
+        android:id="@+id/login_ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="110dp"
-        android:fontFamily="@font/montserrat_bold"
-        android:gravity="center_horizontal"
-        android:text="Login"
-        android:textAlignment="center"
-        android:textColor="@color/colorMainColour"
-        android:textSize="32sp"
-        android:textStyle="bold" />
-
-    <!-- Google Sign In Btn -->
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/googleLoginBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@+id/login_mall_TV"
-        android:layout_marginBottom="20dp"
-        />
-
-    <!-- TextView: Mall -->
-    <TextView
-        android:id="@+id/login_mall_TV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/login_emailTIL"
-        android:fontFamily="@font/open_sans_bold"
-        android:text="xxx Mall"
-        android:textSize="20sp" />
-
-    <View
-        android:layout_below="@+id/login_mall_TV"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
+        android:orientation="vertical"
+        android:gravity="center">
 
 
-    <!-- EditText: Email -->
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:id="@+id/login_emailTIL">
+        <!-- Text: Let's Collab-->
+        <TextView
+            android:id="@+id/ss_name_TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/lemonada_bold"
+            android:text="Let's Collab"
+            android:textColor="@color/colorMainColour"
+            android:textSize="35sp"
+            android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/login_emailET"
+        <!-- Text: Login
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/textbox_border"
-            android:fontFamily="@font/open_sans"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            android:paddingVertical="10dp"
-            android:paddingLeft="10dp" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-
-    <!-- EditText: Password -->
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:id="@+id/login_passwordTIL"
-        android:layout_below="@id/login_emailTIL"
-        app:passwordToggleEnabled="true">
-
-        <EditText
-            android:id="@+id/login_passwordET"
+            android:layout_marginTop="40dp"
+            android:fontFamily="@font/montserrat_bold"
+            android:text="Login"
+            android:textAlignment="center"
+            android:textColor="@color/colorMainColour"
+            android:textSize="32sp"
+            android:textStyle="bold" />
+-->
+        <!-- Google Sign In Btn -->
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/googleLoginBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/textbox_border"
+            android:layout_marginVertical="40dp"
+            />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_below="@+id/login_ll">
+
+
+        <!-- TextView: Mall -->
+        <TextView
+            android:id="@+id/login_mall_TV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/open_sans_bold"
+            android:text="xxx Mall"
+            android:textSize="20sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"/>
+
+        <!-- EditText: Email -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/login_emailTIL">
+
+            <EditText
+                android:id="@+id/login_emailET"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/textbox_border"
+                android:fontFamily="@font/open_sans"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:paddingVertical="10dp"
+                android:paddingLeft="10dp" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <!-- EditText: Password -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/login_passwordTIL"
+            android:layout_below="@id/login_emailTIL"
+            app:passwordToggleEnabled="true">
+
+            <EditText
+                android:id="@+id/login_passwordET"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/textbox_border"
+                android:fontFamily="@font/open_sans"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:paddingLeft="10dp" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="30dp"
+            android:gravity="center">
+
+
+            <!-- Button: Auto login -->
+            <RelativeLayout
+                android:id="@+id/login_RL_auto"
+                android:layout_width="80dp"
+                android:layout_height="50dp">
+
+
+                <Button
+                    android:id="@+id/login_loginbtn_auto"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:background="@drawable/rounded_button"
+                    android:text="Admin"
+                    android:fontFamily="@font/monda_bold"
+                    android:textColor="@color/colorWhite"
+                    />
+            </RelativeLayout>
+
+
+            <!-- Button: Login -->
+            <RelativeLayout
+                android:id="@+id/login_RL"
+                android:layout_width="130dp"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="30dp">
+
+                <Button
+                    android:id="@+id/login_loginbtn"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:background="@drawable/rounded_button"
+                    />
+                <ImageView
+                    android:id="@+id/loginImage"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/ic_login"
+                    android:scaleType="fitXY"
+                    android:layout_margin="10dp"
+                    android:elevation="2dp"
+                    android:backgroundTint="@color/colorWhite"
+                    />
+                <TextView
+                    android:id="@+id/loginText"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_alignLeft="@+id/loginImage"
+                    android:layout_centerInParent="true"
+                    android:layout_marginLeft="15dp"
+                    android:elevation="2dp"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:gravity="center"
+                    android:text="Login"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+
+            <!-- Button: Auto login -->
+            <RelativeLayout
+                android:layout_width="80dp"
+                android:layout_height="50dp">
+
+
+                <Button
+                    android:id="@+id/login_loginbtn_auto2"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:background="@drawable/rounded_button"
+                    android:text="Admin2"
+                    android:fontFamily="@font/monda_bold"
+                    android:textColor="@color/colorWhite"
+                    />
+            </RelativeLayout>
+
+        </LinearLayout>
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="bottom">
+
+        <!-- Text: Recover password -->
+        <TextView
+            android:id="@+id/recover_password_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/open_sans"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:paddingLeft="10dp" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-
-    <!-- Button: Auto login -->
-    <RelativeLayout
-        android:id="@+id/login_RL_auto"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:layout_below="@id/login_passwordTIL"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="false">
-
-
-        <Button
-            android:id="@+id/login_loginbtn_auto"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:background="@drawable/rounded_button"
-            android:text="Admin"
-            android:fontFamily="@font/monda_bold"
-            android:textColor="@color/colorWhite"
-            />
-    </RelativeLayout>
-
-    <!-- Button: Login -->
-    <RelativeLayout
-        android:id="@+id/login_RL"
-        android:layout_width="130dp"
-        android:layout_height="50dp"
-        android:layout_below="@id/login_passwordTIL"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true">
-
-        <Button
-            android:id="@+id/login_loginbtn"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:background="@drawable/rounded_button"
-            />
-        <ImageView
-            android:id="@+id/loginImage"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_centerVertical="true"
-            android:background="@drawable/ic_login"
-            android:scaleType="fitXY"
-            android:layout_margin="10dp"
-            android:elevation="2dp"
-            android:backgroundTint="@color/colorWhite"
-            />
+            android:text="@string/recover_password"
+            android:textColor="@color/colorBlack"
+            android:textAlignment="center"
+            android:layout_marginBottom="50dp"/>
 
         <TextView
-            android:id="@+id/loginText"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_alignLeft="@+id/loginImage"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="15dp"
-            android:elevation="2dp"
-            android:fontFamily="@font/montserrat_bold"
-            android:gravity="center"
-            android:text="Login"
-            android:textColor="@color/colorWhite"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-    </RelativeLayout>
+            android:id="@+id/dont_have_account_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/open_sans"
+            android:textAlignment="center"
+            android:text="@string/dont_have_an_account"
+            android:textColor="@color/colorBlack" />
+    </LinearLayout>
 
-
-    <!-- Text: Recover password -->
-
-    <!-- Text: Go to login page -->
-    <TextView
-        android:id="@+id/recover_password_tv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/login_RL"
-        android:layout_marginTop="36dp"
-        android:fontFamily="@font/open_sans"
-        android:gravity="center"
-        android:text="@string/recover_password"
-        android:textColor="@color/colorBlack" />
-
-    <TextView
-        android:id="@+id/dont_have_account_tv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-        android:fontFamily="@font/open_sans"
-        android:gravity="center"
-        android:text="@string/dont_have_an_account"
-        android:textColor="@color/colorBlack" />
 
 
 
