--- a/Tech/Shopper/app/src/main/res/layout/activity_main.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_main.xml
@@ -8,38 +8,42 @@
     tools:context=".MainActivity"
     android:background="@color/colorBackgroundColour">
 
-    <!-- Image: Logo -->
-
-    <!-- Button: Register -->
-
-    <ImageView
-        android:id="@+id/main_logo_iv"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:src="@mipmap/ic_logo" />
-
-    <!-- Text: Let's Collab-->
-    <TextView
-        android:id="@+id/ss_name_TV"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_marginTop="50dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="270dp"
-        android:fontFamily="@font/lemonada_bold"
-        android:text="Let's Collab"
-        android:textColor="@color/colorMainColour"
-        android:textSize="35sp"
-        android:textStyle="bold" />
+        android:orientation="vertical"
+        android:gravity="center"
+        android:id="@+id/main_ll">
+
+        <!-- Image: Logo -->
+        <ImageView
+            android:id="@+id/main_logo_iv"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="40dp"
+            android:src="@mipmap/ic_logo" />
+
+        <!-- Text: Let's Collab-->
+        <TextView
+            android:id="@+id/ss_name_TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/lemonada_bold"
+            android:text="Let's Collab"
+            android:textColor="@color/colorMainColour"
+            android:textSize="35sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
 
     <RelativeLayout
         android:id="@+id/main_register_rl"
         android:layout_width="225dp"
         android:layout_height="50dp"
-        android:layout_below="@id/main_logo_iv"
-        android:layout_marginTop="100dp"
+        android:layout_below="@id/main_ll"
+        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true">
 
         <Button
