--- a/Tech/Shopper/app/src/main/res/layout/activity_select_mall.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_select_mall.xml
@@ -54,15 +54,15 @@
                         android:layout_height="70dp" />
 
                     <TextView
-                        android:layout_marginTop="5dp"
-                        android:text="Tampine Mall"
-                        android:textAlignment="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="5dp"
+                        android:text="Bugis Junction"
+                        android:textAlignment="center"
                         android:textColor="@android:color/black"
                         android:textSize="15sp"
-                        android:textStyle="bold"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -97,7 +97,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="5dp"
-                        android:text="Singapore Mall"
+                        android:text="City Square Mall"
                         android:textAlignment="center"
                         android:textColor="@android:color/black"
                         android:textSize="15sp"
@@ -136,7 +136,7 @@
 
                     <TextView
                         android:layout_marginTop="5dp"
-                        android:text="Joel Mall"
+                        android:text="Far East Plaza"
                         android:textAlignment="center"
                         android:layout_gravity="center_horizontal"
                         android:textColor="@android:color/black"
@@ -175,7 +175,7 @@
 
                     <TextView
                         android:layout_marginTop="5dp"
-                        android:text="Dustbin Mall"
+                        android:text="Great World City"
                         android:textAlignment="center"
                         android:layout_gravity="center_horizontal"
                         android:textColor="@android:color/black"
@@ -217,7 +217,7 @@
 
                     <TextView
                         android:layout_marginTop="5dp"
-                        android:text="Tampine Mall"
+                        android:text="ION Orchard"
                         android:textAlignment="center"
                         android:layout_gravity="center_horizontal"
                         android:textColor="@android:color/black"
@@ -256,7 +256,7 @@
 
                     <TextView
                         android:layout_marginTop="5dp"
-                        android:text="Tampine Mall"
+                        android:text="Junction 8"
                         android:textAlignment="center"
                         android:layout_gravity="center_horizontal"
                         android:textColor="@android:color/black"
@@ -298,7 +298,7 @@
 
                     <TextView
                         android:layout_marginTop="5dp"
-                        android:text="Tampine Mall"
+                        android:text="Lucky Plaza"
                         android:textAlignment="center"
                         android:layout_gravity="center_horizontal"
                         android:textColor="@android:color/black"
@@ -337,7 +337,7 @@
 
                     <TextView
                         android:layout_marginTop="5dp"
-                        android:text="Tampine Mall"
+                        android:text="Marina Square"
                         android:textAlignment="center"
                         android:layout_gravity="center_horizontal"
                         android:textColor="@android:color/black"
