--- a/Tech/Shopper/app/src/main/res/layout/activity_profile_cplatform_helper.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_profile_cplatform_helper.xml
@@ -25,7 +25,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="100">
+            android:weightSum="100"
+            android:layout_marginVertical="10dp">
 
             <TextView
                 android:layout_weight="95"
@@ -42,15 +43,16 @@
 
             <TextView
                 android:id="@+id/profile_cplatform_helper_requestCount_TV"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_alignParentEnd="true"
-                android:fontFamily="@font/monda_bold"
-                android:background="@drawable/hollow_circle"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:fontFamily="@font/montserrat_bold"
+                android:background="@drawable/solid_circle_red"
                 android:text="99"
                 android:textAlignment="center"
-                android:textColor="@color/colorMainColour"
-                android:textSize="20sp" />
+                android:gravity="center"
+                android:textColor="@color/colorWhite"
+                android:textSize="18sp" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -81,7 +83,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginVertical="5dp">
 
             <TextView
                 android:layout_width="70dp"
@@ -128,7 +131,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="10dp">
 
             <TextView
                 android:id="@+id/profile_cplatform_helper_closed_TV"
@@ -136,6 +139,7 @@
                 android:layout_height="25dp"
                 android:text="Collaboration Closed"
                 android:textAlignment="center"
+                android:gravity="center"
                 android:textColor="@color/colorWhite"
                 android:fontFamily="@font/open_sans_bold"
                 android:background="@drawable/rounded_button"/>
