--- a/Tech/Shopper/app/src/main/res/layout/fragment_profile3.xml
+++ b/Tech/Shopper/app/src/main/res/layout/fragment_profile3.xml
@@ -19,15 +19,26 @@
             android:orientation="horizontal"
             android:weightSum="10"
             >
+
+            <ImageView
+                android:id="@+id/profile3_store_image_IV"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="7"
+                android:scaleType="centerCrop"
+                android:background="@color/colorMainDarkColour"
+                android:src="@drawable/ic_add_image"/>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="3">
+                android:layout_weight="3"
+                android:gravity="center"
+                android:layout_marginLeft="10dp">
                 <TextView
                     android:id="@+id/profile3_store_name_TV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/open_sans_bold"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="ABC PTE LTD"
                     android:textSize="20sp"
                     android:textStyle="bold" />
@@ -37,9 +48,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/profile3_store_name_TV"
-                    android:fontFamily="@font/open_sans_bold"
+                    android:fontFamily="@font/montserrat"
                     android:text="Tampines Mall"
-                    android:textStyle="bold"
                     android:textSize="20sp"
                     />
 
@@ -47,10 +57,9 @@
                     android:id="@+id/profile3_storeUnit_TV"
                     android:layout_below="@id/profile3_mall_name_TV"
                     android:layout_width="wrap_content"
-                    android:fontFamily="@font/open_sans"
+                    android:fontFamily="@font/montserrat"
                     android:layout_height="wrap_content"
                     android:text="#07-77"
-                    android:textStyle="bold"
                     android:textSize="20sp"
                     />
 
@@ -58,23 +67,21 @@
                     android:id="@+id/profile3_tags_TV"
                     android:layout_marginLeft="15dp"
                     android:layout_below="@id/profile3_mall_name_TV"
-                    android:fontFamily="@font/open_sans"
+                    android:fontFamily="@font/montserrat"
                     android:layout_toRightOf="@id/profile3_storeUnit_TV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="F n B"
-                    android:textStyle="bold"
                     android:textSize="20sp"
                     />
 
                 <TextView
                     android:id="@+id/profile3_ratingValue_TV"
                     android:layout_below="@id/profile3_storeUnit_TV"
-                    android:fontFamily="@font/open_sans"
+                    android:fontFamily="@font/montserrat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="5.0"
-                    android:textStyle="bold"
                     android:textSize="18sp"
                     />
                 <RatingBar
@@ -98,36 +105,26 @@
                     android:id="@+id/profile3_ratingQuantity_TV"
                     android:layout_below="@id/profile3_storeUnit_TV"
                     android:layout_width="wrap_content"
-                    android:fontFamily="@font/open_sans_bold"
+                    android:fontFamily="@font/montserrat"
                     android:layout_height="wrap_content"
                     android:text="(7)"
                     android:layout_toRightOf="@id/profile3_rating_RB"
                     android:layout_marginLeft="25dp"
-                    android:textStyle="bold"
                     android:textSize="18sp"
                     />
 
                 <Button
                     android:id="@+id/profile3_store_edit_BTN"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:background="@drawable/hollow_circle"
                     android:foreground="@drawable/ic_edit_black"
                     android:foregroundTint="@color/colorMainColour"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginRight="20dp"
-                    android:layout_alignParentBottom="true"/>
+                    android:layout_alignParentTop="true"/>
             </RelativeLayout>
 
 
-            <ImageView
-                android:id="@+id/profile3_store_image_IV"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="7"
-                android:scaleType="centerCrop"
-                android:background="@color/colorMainDarkColour"
-                android:src="@drawable/ic_add_image"/>
 
 
         </LinearLayout>
