--- a/Tech/Shopper/app/src/main/res/layout/fragment_profile.xml
+++ b/Tech/Shopper/app/src/main/res/layout/fragment_profile.xml
@@ -1,95 +1,153 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackgroundColour"
-    tools:context="Fragments.ProfileFragment">
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorBackgroundColour">
 
-
-    <ScrollView
+    <!-- Top: Store details -->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-        <RelativeLayout
+        android:layout_height="160dp"
+        android:background="@color/colorWhite">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="10dp"
+            android:orientation="horizontal"
+            android:weightSum="10"
+            >
 
-            <!-- Cover Photo -->
             <ImageView
-                android:id="@+id/profile_coverIV"
+                android:id="@+id/profile3_store_image_IV"
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:scaleType="fitXY"
-                android:background="@color/colorMainColour">
-
-            </ImageView>
-            <LinearLayout
+                android:layout_height="match_parent"
+                android:layout_weight="7"
+                android:scaleType="centerCrop"
+                android:background="@color/colorMainDarkColour"
+                android:src="@drawable/ic_add_image"/>
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:orientation="horizontal"
-                android:layout_marginTop="100dp">
-
-                <ImageView
-                    android:id="@+id/profile_avatarIV"
-                    android:layout_marginStart="20dp"
-                    android:background="@color/colorMainDarkColour"
-                    android:padding="5dp"
-                    android:layout_marginLeft="20dp"
-                    android:scaleType="fitXY"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
-                    android:src="@drawable/ic_add_image">
-                </ImageView>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:gravity="center"
+                android:layout_marginLeft="10dp">
+                <TextView
+                    android:id="@+id/profile3_store_name_TV"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:background="#77000000">
+                    android:fontFamily="@font/montserrat_bold"
+                    android:text="ABC PTE LTD"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/profile_nameTV"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp"
-                        android:textSize="25sp"
-                        android:textColor="@color/colorWhite"/>
+                <TextView
+                    android:id="@+id/profile3_mall_name_TV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/profile3_store_name_TV"
+                    android:fontFamily="@font/montserrat"
+                    android:text="Tampines Mall"
+                    android:textSize="20sp"
+                    />
 
-                    <TextView
-                        android:id="@+id/profile_emailTV"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginLeft="5dp"
-                        android:textColor="@color/colorWhite"/>
+                <TextView
+                    android:id="@+id/profile3_storeUnit_TV"
+                    android:layout_below="@id/profile3_mall_name_TV"
+                    android:layout_width="wrap_content"
+                    android:fontFamily="@font/montserrat"
+                    android:layout_height="wrap_content"
+                    android:text="#07-77"
+                    android:textSize="20sp"
+                    />
 
-                    <TextView
-                        android:id="@+id/profile_phoneTV"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginLeft="5dp"
-                        android:textColor="@color/colorWhite"/>
+                <TextView
+                    android:id="@+id/profile3_tags_TV"
+                    android:layout_marginLeft="15dp"
+                    android:layout_below="@id/profile3_mall_name_TV"
+                    android:fontFamily="@font/montserrat"
+                    android:layout_toRightOf="@id/profile3_storeUnit_TV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="F n B"
+                    android:textSize="20sp"
+                    />
 
-                </LinearLayout>
-            </LinearLayout>
-        </RelativeLayout>
+                <TextView
+                    android:id="@+id/profile3_ratingValue_TV"
+                    android:layout_below="@id/profile3_storeUnit_TV"
+                    android:fontFamily="@font/montserrat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="5.0"
+                    android:textSize="18sp"
+                    />
+                <RatingBar
+                    android:id="@+id/profile3_rating_RB"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="3dp"
+                    style="@style/Widget.AppCompat.RatingBar.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/profile3_ratingValue_TV"
+                    android:layout_below="@id/profile3_storeUnit_TV"
+                    android:indeterminate="false"
+                    android:isIndicator="true"
+                    android:transformPivotX="0dp"
+                    android:max="5"
+                    android:rating="4"
+                    android:scaleX="1.2"
+                    android:scaleY="1.2"/>
 
-    </ScrollView>
+                <TextView
+                    android:id="@+id/profile3_ratingQuantity_TV"
+                    android:layout_below="@id/profile3_storeUnit_TV"
+                    android:layout_width="wrap_content"
+                    android:fontFamily="@font/montserrat"
+                    android:layout_height="wrap_content"
+                    android:text="(7)"
+                    android:layout_toRightOf="@id/profile3_rating_RB"
+                    android:layout_marginLeft="25dp"
+                    android:textSize="18sp"
+                    />
 
-    <!-- Floating Action Button -->
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:src="@drawable/ic_edit_white"
-        android:layout_width="wrap_content"
+                <Button
+                    android:id="@+id/profile3_store_edit_BTN"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/hollow_circle"
+                    android:foreground="@drawable/ic_edit_black"
+                    android:foregroundTint="@color/colorMainColour"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="true"/>
+            </RelativeLayout>
+
+
+
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <!-- Middle: Tab Layout -->
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/profile3_tablayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="10dp"
-        android:layout_alignParentRight="true"
-        />
+        android:background="@color/colorMainColour"
+        app:tabGravity="fill"
+        app:tabIndicatorColor="@color/colorWhite"
+        app:tabMode="fixed"
+        app:tabTextColor="@color/colorWhite" />
 
-</RelativeLayout>
+    <androidx.viewpager.widget.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/profile3_viewPager"
+        android:background="@color/colorGrey">
+
+    </androidx.viewpager.widget.ViewPager>
+
+</LinearLayout>
