--- a/Tech/Shopper/app/src/main/res/layout/row_users.xml
+++ b/Tech/Shopper/app/src/main/res/layout/row_users.xml
@@ -4,8 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardUseCompatPadding="true"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="2dp"
+    app:cardCornerRadius="5dp"
+    app:cardElevation="5dp"
     app:cardBackgroundColor="@color/colorWhite"
     app:contentPadding="3dp"
     android:background="@color/colorBackgroundColour"
@@ -20,27 +20,65 @@
             android:id="@+id/users_avatarIV"
             android:src="@drawable/ic_default_image"
             android:layout_width="70dp"
-            android:layout_height="70dp"/>
+            android:layout_height="70dp"
+            android:layout_marginHorizontal="5dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_gravity="center">
 
-            <TextView
-                android:id="@+id/users_nameTV"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Person Name"
-                android:textSize="18sp"
-                android:textColor="@color/colorBlack"/>
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/users_emailTV"
-                android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:text="Store: "
+                    android:fontFamily="@font/montserrat_bold"
+                    android:textSize="18sp"
+                    android:maxLength="15"
+                    android:ellipsize="end"
+                    android:textColor="@color/colorBlack"/>
+
+                <TextView
+                    android:id="@+id/users_nameTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat"
+                    android:text="Store Name"
+                    android:textSize="18sp"
+                    android:textColor="@color/colorBlack"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Person Email"
-                android:textColor="@color/colorBlack"/>
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:text="Title: "
+                    android:minWidth="100dp"
+                    android:textSize="18sp"
+                    android:textColor="@color/colorBlack"/>
+
+                <TextView
+                    android:id="@+id/users_collabTitleTV"
+                    android:layout_width="match_parent"
+                    android:fontFamily="@font/montserrat"
+                    android:layout_height="wrap_content"
+                    android:text="Collab Title"
+                    android:maxLength="15"
+                    android:ellipsize="end"
+                    android:textColor="@color/colorBlack"/>
+            </LinearLayout>
+
 
         </LinearLayout>
 
