--- a/Tech/Shopper/app/src/main/res/menu/menu_nav.xml
+++ b/Tech/Shopper/app/src/main/res/menu/menu_nav.xml
@@ -12,12 +12,8 @@
         android:title="Notifications"
         android:icon="@drawable/ic_notification"
         />
-    <item android:id="@+id/nav_users"
-        android:title="Users"
-        android:icon="@drawable/ic_users_black"
-        />
-    <item android:id="@+id/nav_chat"
-        android:title="Chats"
+    <item android:id="@+id/nav_partner"
+        android:title="Chat"
         android:icon="@drawable/ic_chat_black"
         />
 </menu>
