--- a/Tech/Shopper/app/src/main/res/layout/activity_shop_insight_product.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_shop_insight_product.xml
@@ -109,8 +109,7 @@
             android:textStyle="bold"
             android:textColor="@color/colorMainColour"
             android:fontFamily="@font/montserrat_bold"
-            android:textSize="16sp"
-            android:layout_marginBottom="20dp" />
+            android:textSize="16sp"/>
 
         <LinearLayout
             android:layout_marginVertical="40dp"
@@ -124,6 +123,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+
                 <!-- Title -->
                 <TextView
                     android:layout_width="match_parent"
@@ -132,7 +132,12 @@
                     android:textStyle="bold"
                     android:textColor="@color/colorBlack"
                     android:textAlignment="center"
+                    android:layout_marginTop="5dp"
                     android:textSize="12sp"/>
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/ic_message_black"/>
                 <!-- Title -->
                 <TextView
                     android:textAlignment="center"
@@ -153,11 +158,16 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="(April)"
+                    android:text="(March)"
                     android:textStyle="bold"
                     android:textColor="@color/colorBlack"
                     android:textAlignment="center"
+                    android:layout_marginTop="5dp"
                     android:textSize="12sp"/>
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/ic_message_black"/>
                 <!-- Title -->
                 <TextView
                     android:textAlignment="center"
@@ -177,11 +187,16 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="(May)"
+                    android:text="(March)"
                     android:textStyle="bold"
                     android:textColor="@color/colorBlack"
                     android:textAlignment="center"
+                    android:layout_marginTop="5dp"
                     android:textSize="12sp"/>
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/ic_message_black"/>
                 <!-- Title -->
                 <TextView
                     android:textAlignment="center"
