--- a/Tech/Shopper/app/src/main/res/layout/fragment_notification.xml
+++ b/Tech/Shopper/app/src/main/res/layout/fragment_notification.xml
@@ -15,6 +15,7 @@
         android:layout_height="0dp"/>
 
     <Button
+        android:layout_marginTop="25dp"
         android:id="@+id/notification_clear_all_btn"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
