--- a/Tech/Shopper/app/src/main/res/values/styles.xml
+++ b/Tech/Shopper/app/src/main/res/values/styles.xml
@@ -8,7 +8,13 @@
         <item name="colorAccent">#CC0044</item>
     </style>
 
+    <style name="RatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@android:color/darker_gray</item>
+        <item name="colorControlActivated">#EE0044</item>
+    </style>
+
     <style name="JoelTheme" parent="Theme.MaterialComponents.Light">
+        <item name="android:itemBackground">@android:color/darker_gray</item>
         <item name="android:textColorPrimary">@color/colorWhite</item>
         <item name="colorPrimary">#E60037</item>
         <item name="colorPrimaryDark">#CC0044</item>
